# cade

./: .cdn-script.env.sample  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  cdn-script.Dockerfile  commands.json  commands.md  db_password.txt.sample  docker-compose.yml  nginx.conf  pyproject.toml
cade/: bot.py  commands.md  config.ini.sample
cade/cogs/: __init__.py  media.py  misc.py  music.py
cade/utils/: base.py  clients.py  db.py  edit.py  events.py  ext.py  image_utils.py  keys.py  tracks.py  useful.py  vars.py  views.py
cogs/: __init__.py  funny.py  general.py  media.py  misc.py  music.py
largefiles/: index.html
lavalink/: lavalink.yml.sample
utils/: base.py  bot_vars.py  clients.py  data.py  database.py  dataclasses.py  db.py  edit.py  enums.py  events.py  ext.py  functions.py  image.py  img_edit.py  keys.py  lavalink_server.py  main.py  tracks.py  useful.py  variables.py  vars.py  video.py  views.py  voice.py
utils/music/: events.py  tracks.py  voice.py
