[tool.poetry]
name = "cade"
version = "0.1.0"
description = ""
authors = ["clearlakes <65923236+clearlakes@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lavalink = "*"
Pillow = "^9.2.0"
opencv-python = "4.6.0.66"
Wand = "^0.6.9"
async-spotify = "^0.4.4"
pilmoji = "^2.0.2"
"discord.py" = { extras = ["speed"], version = "^2.0.0" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
yt-dlp = "*"
motor = "^3.0.0"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
